--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 group "ru.jihor.spel-gates-spring-boot"
-version "0.0.2-SNAPSHOT"
+version "0.0.2"
 
 subprojects {
 	apply plugin: 'io.spring.dependency-management'
