--- a/spel-gates-spring-boot-autoconfigure/build.gradle
+++ b/spel-gates-spring-boot-autoconfigure/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
     compile project(":spel-gates-spring-boot-core")
+    compile "org.springframework.boot:spring-boot-autoconfigure"
+    compile "org.springframework.boot:spring-boot-actuator-autoconfigure"
+    annotationProcessor "org.springframework.boot:spring-boot-autoconfigure-processor"
 }
