--- a/spel-gates-spring-boot-core/build.gradle
+++ b/spel-gates-spring-boot-core/build.gradle
@@ -3,3 +3,7 @@ dependencies {
     compile "org.springframework:spring-context"
     compile "org.springframework.boot:spring-boot-actuator"
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
+}
